# summit

./: .gitignore  README.md  fetch_summaries.py  pyproject.toml  requirements.txt
docs/: index.html
summit/: __init__.py  cli.py  core.py  render.py  sched.py  summarizers.py
